actix-multipart-derive/tests/trybuild/deny-parse-fail.stderr
error: Unknown value: `no`. Available values: `deny`, `ignore`, `replace`
 --> tests/trybuild/deny-parse-fail.rs:4:31
  |
4 | #[multipart(duplicate_field = "no")]
  |                               ^^^^
