actix-multipart-derive/tests/trybuild/deny-parse-fail.rs
use actix_multipart::form::MultipartForm;

#[derive(MultipartForm)]
#[multipart(duplicate_field = "no")]
struct Form {}

fn main() {}
